...
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="8dp"></com.github.mikephil.charting.charts.LineChart>

    <Button
        android:id="@+id/btn_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="16dp"
        android:text="Week"
        app:layout_constraintRight_toRightOf="@+id/btn_light"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btn_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Month"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_day"
...

    <Button
        android:id="@+id/btn_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Light"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_humidity"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Humidity"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_month"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btn_month" />

    <Button
        android:id="@+id/btn_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Temperature"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_humidity"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btn_year" />

</android.support.constraint.ConstraintLayout>
